force-app/main/default/objects/LocationSite__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Name +&quot;, &quot;+  City__c +&quot;, &quot;+ TEXT(State__c) +&quot; &quot;+ ZIPPostal_code__c + &quot;, &quot;+ TEXT(County__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>