force-app/main/default/objects/LocationSite__c/fields/Average_home_price_in_area__c.field-meta.xml
<CustomField>
    <fullName>Average_home_price_in_area__c</fullName>
    <label>Average home price in area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>