force-app/main/default/objects/LocationSite__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Denver County</fullName>
            </value>
            <value>
                <fullName>Hillsborough County</fullName>
            </value>
            <value>
                <fullName>Multnomah County</fullName>
            </value>
            <value>
                <fullName>Mecklenburg County</fullName>
            </value>
            <value>
                <fullName>Fulton County</fullName>
            </value>
            <value>
                <fullName>Maricopa County</fullName>
            </value>
            <value>
                <fullName>King County</fullName>
            </value>
            <value>
                <fullName>Travis County</fullName>
            </value>
            <value>
                <fullName>San Diego County</fullName>
            </value>
            <value>
                <fullName>Davidson County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>