force-app/main/default/objects/LocationSite__c/fields/Nearby_hospitals__c.field-meta.xml
<CustomField>
    <fullName>Nearby_hospitals__c</fullName>
    <label>Nearby hospitals</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>