force-app/main/default/objects/LocationSite__c/fields/Nearby_shopping_centers__c.field-meta.xml
<CustomField>
    <fullName>Nearby_shopping_centers__c</fullName>
    <label>Nearby shopping centers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>