force-app/main/default/objects/LocationSite__c/fields/Parks_and_recreation__c.field-meta.xml
<CustomField>
    <fullName>Parks_and_recreation__c</fullName>
    <label>Parks and recreation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>