force-app/main/default/objects/LocationSite__c/fields/Public_transportation_available__c.field-meta.xml
<CustomField>
    <fullName>Public_transportation_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public transportation available</label>
    <type>Checkbox</type>
</CustomField>