force-app/main/default/objects/LocationSite__c/fields/Safety_Score__c.field-meta.xml
<CustomField>
    <fullName>Safety_Score__c</fullName>
    <formula>CASE( 
 TEXT(Safetycrime_rating__c) , 
 &quot;Excellent&quot; , 4, 
 &apos;Good&apos;, 3, 
 &apos;Fair&apos;, 2, 
 &apos;Poor&apos;, 1, 
 0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>