force-app/main/default/objects/LocationSite__c/fields/Safetycrime_rating__c.field-meta.xml
<CustomField>
    <fullName>Safetycrime_rating__c</fullName>
    <label>Safety/crime rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>