force-app/main/default/objects/LocationSite__c/fields/School_district__c.field-meta.xml
<CustomField>
    <fullName>School_district__c</fullName>
    <label>School district</label>
    <length>255</length>
    <type>Text</type>
</CustomField>