force-app/main/default/objects/LocationSite__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Tennessee</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>