force-app/main/default/objects/LocationSite__c/fields/Walkability_score_1_100__c.field-meta.xml
<CustomField>
    <fullName>Walkability_score_1_100__c</fullName>
    <label>Walkability score (1-100)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>