force-app/main/default/objects/LocationSite__c/fields/ZIPPostal_code__c.field-meta.xml
<CustomField>
    <fullName>ZIPPostal_code__c</fullName>
    <label>ZIP/Postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>